--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootcatch-themes": "^1.7.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "vue": "^2.6.10",
+    "vue-fontawesome-icon": "^1.1.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
