--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
+    "vue-date-pick": "^1.2.1",
     "vue-fontawesome-icon": "^1.1.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
