--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-date-pick": "^1.2.1",
     "vue-fontawesome-icon": "^1.1.0",
+    "vue-prismjs": "^1.2.0",
     "vue-router": "^3.1.3",
     "vuejs-datepicker": "^1.6.2"
   },
