--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "svgo": "1.3.0",
     "vue": "^2.6.10",
     "vue-date-pick": "^1.2.1",
     "vue-fontawesome-icon": "^1.1.0",
